[package]
name = "opengames_untils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valora = "0.2.12"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
log4rs = "1.2.0"
log = "0.4.17"
